<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f68c59">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:background="#fb8d4c"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#f68c59">

            <TextView
                android:id="@+id/tvDialogScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="73dp"
                android:fontFamily="@font/sf_pro_text_heavy"
                android:gravity="center"
                android:textColor="@color/green"
                android:textSize="40sp"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="0" />

            <TextView
                android:id="@+id/viewScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-15dp"
                android:fontFamily="@font/sf_pro_text_heavy"
                android:gravity="center"
                android:text="@string/your_score"
                android:textColor="@color/white"
                android:textSize="21sp"
                app:layout_constraintTop_toBottomOf="@id/tvDialogScore" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnClose"
                android:layout_width="0dp"
                android:layout_height="67dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="36dp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/sf_pro_text_bold"
                android:text="@string/close"
                android:textColor="#F2EC6D"
                android:textSize="17sp"
                app:cornerRadius="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnTryAgain"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewScore"
                app:strokeColor="@color/white"
                app:strokeWidth="3dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnTryAgain"
                android:layout_width="0dp"
                android:layout_height="67dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="36dp"
                android:backgroundTint="#F2EC6D"
                android:fontFamily="@font/sf_pro_text_bold"
                android:text="@string/try_again"
                android:textColor="@color/white"
                android:textSize="17sp"
                app:cornerRadius="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btnClose"
                app:layout_constraintTop_toBottomOf="@id/viewScore" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>